Add security system. Add sponsor and sponsorship. Start translation. Remove json builder. Format views to use more horizontal space.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,48 @@
 
 en:
   home: "Home"
+  communities: "Communities"
+  families: "Families"
+  children: "Children"
+  guardians: "Guardians"
+  sponsors: "Sponsors"
+  sponsorships: "Sponsorships"
+  show: "Show"
+  edit: "Edit"
+  new: "New"
+  destroy: "Destroy"
+  confirm_destroy: Are you sure?
+  submit: "Submitxxx"
+  code: "Code"
+  family: "Family"
+  family_names: "Family Names"
+  family_name_1: "Family Name 1"
+  family_name_2: "Family Name 2"
+  given_names: "Given Names"
+  given_name_1: "Given Name 1"
+  given_name_2: "Given Name 2"
+  preferred_name: "Preferred Name"
+  date_of_birth: "Date of Birth"
+  status: "Status"
+  gender: "Gender"
+  new_child: "New Child"
+  notes: "Notes"
+  next_code: "Next Code"
+  child_created: "Child was successfully created."
+  child_updated: "Child was successfully updated."
+  child_deleted: "Child was successfully deleted."
+  community_created: "Community was successfully created."
+  community_updated: "Community was successfully updated."
+  community_deleted: "Community was successfully deleted."
+  sponsorship_created: "Sponsorship was successfully created."
+  sponsorship_updated: "Sponsorship was successfully updated."
+  sponsorship_deleted: "Sponsorship was successfully deleted."
+
   activerecord:
     models:
       family_year: "Family Year"
+    attributes:
+      child:
+        code: "Code"
+        name: "Name"
+        notes: "Notes"
