Add enrollments and further i18n and add photos and add interviewer role

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,49 +20,304 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  home: "Home"
-  communities: "Communities"
-  families: "Families"
+  active: "Active"
+  child: "Child"
   children: "Children"
-  guardians: "Guardians"
-  sponsors: "Sponsors"
-  sponsorships: "Sponsorships"
-  show: "Show"
-  edit: "Edit"
-  new: "New"
-  destroy: "Destroy"
-  confirm_destroy: Are you sure?
-  submit: "Submitxxx"
-  code: "Code"
-  family: "Family"
-  family_names: "Family Names"
-  family_name_1: "Family Name 1"
-  family_name_2: "Family Name 2"
-  given_names: "Given Names"
-  given_name_1: "Given Name 1"
-  given_name_2: "Given Name 2"
-  preferred_name: "Preferred Name"
-  date_of_birth: "Date of Birth"
-  status: "Status"
-  gender: "Gender"
-  new_child: "New Child"
-  notes: "Notes"
-  next_code: "Next Code"
   child_created: "Child was successfully created."
   child_updated: "Child was successfully updated."
   child_deleted: "Child was successfully deleted."
+  city: "City"
+  close_up_photo: "Close Up Photo"
+  code: "Code"
+  communities: "Communities"
+  community: "Community"
   community_created: "Community was successfully created."
   community_updated: "Community was successfully updated."
   community_deleted: "Community was successfully deleted."
+  confirm_destroy: "Are you sure?"
+  date_of_birth: "Date of Birth"
+  destroy: "Destroy"
+  dollar_amount: "Dollar Amount"
+  donor_number: "Donor Number"
+  edit: "Edit"  
+  enrollment: "Registration"
+  enrollments: "Registrations"
+  enrollment_created: "Registration was successfully created."
+  enrollment_updated: "Registration was successfully updated."
+  enrollment_destroyed: "Registration was successfully destroyed."
+  families: "Families"
+  family: "Family"
+  family_created: "Family was successfully created."
+  family_updated: "Family was successfully updated."
+  family_destroyed: "Family was successfully destroyed."
+  family_name: "Family Name"
+  family_names: "Family Names"
+  family_name1: "Family Name 1"
+  family_name2: "Family Name 2"
+  family_year: "Family Year"
+  family_years: "Family Years"
+  family_year_created: "Family year was successfully created."
+  family_year_updated: "Family year was successfully updated."
+  family_year_destroyed: "Family year was successfully destroyed."
+  full_photo: "Full Photo"
+  gender: "Gender"
+  given_name: "Given Name"
+  given_names: "Given Names"
+  given_name1: "Given Name 1"
+  given_name2: "Given Name 2"
+  grades: "Grades"
+  grades_notes: "Grades Notes"
+  guardian: "Guardian"
+  guardians: "Guardians"
+  guardian_created: "Guardian was successfully created."
+  guardian_updated: "Guardian was successfully updated."
+  guardian_destroyed: "Guardian was successfully destroyed."
+  impressum: "Impressum"
+  home: "Home"
+  name: "Name"
+  midyear_attendance: "July Attendance"
+  midyear_attendance_notes: "July Attendance Notes"
+  midyear_pant_size: "July Pant Size"
+  midyear_shirt_size: "July Shirt Size"
+  midyear_shoe_size: "July Shoe Size"
+  new: "New"
+  new_child: "New Child"
+  new_community: "New Community"
+  new_enrollment: "New Enrollment"
+  new_family: "New Family"
+  new_family_year: "New Family Year"
+  new_guardian: "New Guardian"
+  new_sponsor: "New Sponsor"
+  new_sponsorship: "New Sponsorship"
+  newyear_attendance: "January Attendance"
+  newyear_attendance_notes: "January Attendance Notes"
+  newyear_pant_size: "January Pant Size"
+  newyear_shirt_size: "January Shirt Size"
+  newyear_shoe_size: "January Shoe Size"
+  next_code: "Next Code"
+  not_included: "Not Included"
+  number_children: "Number of Children"
+  notes: "Notes"
+  letter: "Letter"
+  link: "Link"
+  login: "Login"
+  logout: "Logout"
+  pass: "Pass"
+  password: "Password"
+  pass_notes: "Pass Notes"
+  phones: "Phones"
+  picture: "Picture"
+  postal_code: "Postal Code"
+  preferred_name: "Preferred Name"
+  primary: "Primary"
+  primary_phone: "Primary Phone"
+  primary_email: "Primary Email"
+  record_not_saved: "The record was not saved due to errors."
+  report_card: "Report Card"
+  report_notes: "Report Notes"
+  relationship: "Relationship"
+  role_accountant: "Accountant"
+  role_admin: "Admin"
+  role_author: "Author"
+  role_editor: "Editor"
+  role_interviewer: "Interviewer"
+  secondary_phone: "Secondary Phone"
+  secondary_email: "Secondary Email"
+  school_year: "School Year"
+  show: "Show"
+  street_address: "Street Address"
+  sponsor: "Sponsor"
+  sponsors: "Sponsors"
+  sponsor_created: "Sponsor was successfully created."
+  sponsor_updated: "Sponsor was successfully updated."
+  sponsor_deleted: "Sponsor was successfully deleted."
+  sponsorship: "Sponsorship"
+  sponsorships: "Sponsorships"
   sponsorship_created: "Sponsorship was successfully created."
   sponsorship_updated: "Sponsorship was successfully updated."
   sponsorship_deleted: "Sponsorship was successfully deleted."
-
-  activerecord:
-    models:
-      family_year: "Family Year"
-    attributes:
-      child:
-        code: "Code"
-        name: "Name"
-        notes: "Notes"
+  status: "Status"
+  submit: "Submit"
+  username: "Username"
+  use_english: "en"
+  use_spanish: "es"
+  work_form: "Work Form"
+  work_form_notes: "Work Form Notes"
+  bool:
+    "true": "True"
+    "false": "False"
+  child_gender:
+    male: "Male Hombre"
+    female: "Female Mujer"
+  child_status:
+    in_program: "In Program"
+    out_of_program: "Out of Program"
+    graduate: "Graduate"
+  enrollment_attendance:
+    "yes": "Yes"
+    "no": "No"
+    sick: "Sick"
+    graduated: "Graduated"
+    university_sponsored: "University Sponsored"
+    university_not_sponsored: "University Not Sponsored"
+    out_of_program: "Out of Program"
+    other: "Other"
+  enrollment_grades:
+    grade1: "1"
+    grade2: "2"
+    grade3: "3"
+    grade4: "4"
+    grade5: "5"
+    grade6: "6"
+    grade7: "7"
+    grade8: "8"
+    grade9: "9"
+    grade10: "10"
+    grade11: "11"
+    grade12: "12"
+    aula_inter: "Aula Inter"
+  enrollment_shirt_sizes:
+    male_4: "Male Hombre 4"
+    male_6: "Male Hombre 6"
+    male_8: "Male Hombre 8"
+    male_10: "Male Hombre 10"
+    male_12: "Male Hombre 12"
+    male_14: "Male Hombre 14"
+    male_16: "Male Hombre 16"
+    male_18: "Male Hombre 18/XS"
+    male_s: "Male Hombre S"
+    male_m: "Male Hombre M"
+    male_l: "Male Hombre L"
+    male_k4: "Male Hombre K4"
+    male_k6: "Male Hombre K6"
+    male_k8: "Male Hombre K8"
+    male_k10: "Male Hombre K10"
+    male_k12: "Male Hombre K12"
+    female_6: "Female Mujer 6"
+    female_8: "Female Mujer 8"
+    female_10: "Female Mujer 10"
+    female_12: "Female Mujer 12"
+    female_14: "Female Mujer 14"
+    female_16: "Female Mujer 16XS"
+    female_18: "Female Mujer 18/S"
+    female_m: "Female Mujer M"
+    female_k4: "Female Mujer K4"
+    female_k6: "Female Mujer K6"
+    female_k8: "Female Mujer K8"
+    female_k10: "Female Mujer K10"
+    female_k12: "Female Mujer K12"
+    other: "Other"
+  enrollment_pant_sizes:
+    male_2: "Male Hombre 2"
+    male_4: "Male Hombre 4"
+    male_6: "Male Hombre 6"
+    male_8: "Male Hombre 8"
+    male_10: "Male Hombre 10"
+    male_12: "Male Hombre 12"
+    male_14: "Male Hombre 14"
+    male_16: "Male Hombre 16"
+    male_18: "Male Hombre 18"
+    male_26: "Male Hombre 26"
+    male_28: "Male Hombre 28"
+    male_30: "Male Hombre 30"
+    male_32: "Male Hombre 32"
+    male_34: "Male Hombre 34"
+    male_36: "Male Hombre 36"
+    male_38: "Male Hombre 38"
+    male_k4: "Male Hombre K4"
+    male_k6: "Male Hombre K6"
+    male_k8: "Male Hombre K8"
+    male_k10: "Male Hombre K10"
+    male_k12: "Male Hombre K12"
+    female_4: "Female Mujer 4"
+    female_6: "Female Mujer 6"
+    female_8: "Female Mujer 8"
+    female_10: "Female Mujer 10"
+    female_12: "Female Mujer 12"
+    female_14: "Female Mujer 14"
+    female_16: "Female Mujer 16"
+    female_18: "Female Mujer 18"
+    female_xs: "Female Mujer XS"
+    female_s: "Female Mujer S"
+    female_m: "Female Mujer M"
+    female_l: "Female Mujer L"
+    female_xl: "Female Mujer XL"
+    female_k4: "Female Mujer K4"
+    female_k6: "Female Mujer K6"
+    female_k8: "Female Mujer K8"
+    female_k10: "Female Mujer K10"
+    female_k12: "Female Mujer K12"
+    female_k14: "Female Mujer K14"
+    female_k16: "Female Mujer K16"
+    female_k18: "Female Mujer K18"
+    other: "Other"
+  enrollment_shoe_sizes:
+    male_24: "Male Hombre 24"
+    male_25: "Male Hombre 25"
+    male_26: "Male Hombre 26"
+    male_27: "Male Hombre 27"
+    male_28: "Male Hombre 28"
+    male_29: "Male Hombre 29"
+    male_30: "Male Hombre 30"
+    male_31: "Male Hombre 31"
+    male_32: "Male Hombre 32"
+    male_33: "Male Hombre 33"
+    male_34: "Male Hombre 34"
+    male_35: "Male Hombre 35"
+    male_36: "Male Hombre 36"
+    male_37: "Male Hombre 37"
+    male_38: "Male Hombre 38"
+    male_39: "Male Hombre 39"
+    male_40: "Male Hombre 40"
+    male_41: "Male Hombre 41"
+    male_42: "Male Hombre 42"
+    male_43: "Male Hombre 43"
+    male_44: "Male Hombre 44"
+    female_24: "Female Mujer 24"
+    female_25: "Female Mujer 25"
+    female_26: "Female Mujer 26"
+    female_27: "Female Mujer 27"
+    female_28: "Female Mujer 28"
+    female_29: "Female Mujer 29"
+    female_30: "Female Mujer 30"
+    female_31: "Female Mujer 31"
+    female_32: "Female Mujer 32"
+    female_33: "Female Mujer 33"
+    female_34: "Female Mujer 34"
+    female_35: "Female Mujer 35"
+    female_36: "Female Mujer 36"
+    female_37: "Female Mujer 37"
+    female_38: "Female Mujer 38"
+    female_39: "Female Mujer 39"
+    female_40: "Female Mujer 40"
+    female_41: "Female Mujer 41"
+    female_42: "Female Mujer 42"
+    female_43: "Female Mujer 43"
+    female_44: "Female Mujer 44"
+    other: "Other"
+  month:
+    jan: "January"
+    feb: "February"
+    mar: "March"
+    apr: "April"
+    may: "May"
+    jun: "June"
+    jul: "July"
+    aug: "August"
+    sep: "September"
+    oct: "October"
+    nov: "November"
+    dec: "December"
+  helpers:
+    submit:
+      create: "Create"
+      update: "Update"
+  guardian_relationship:
+    mother: "Mother"
+    father: "Father"
+    step_mother: "Step Mother"
+    step_father: "Step Father"
+    grand_mother: "Grand Mother"
+    grand_father: "Grand Father"
+    older_sibling: "Older Sibling"
+    other: "Other"
