Spanish translations and fixup.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,7 +39,7 @@ en:
   destroy: "Destroy"
   dollar_amount: "Dollar Amount"
   donor_number: "Donor Number"
-  edit: "Edit"  
+  edit: "Edit"
   enrollment: "Registration"
   enrollments: "Registrations"
   enrollment_created: "Registration was successfully created."
@@ -83,7 +83,7 @@ en:
   new: "New"
   new_child: "New Child"
   new_community: "New Community"
-  new_enrollment: "New Enrollment"
+  new_enrollment: "New Registration"
   new_family: "New Family"
   new_family_year: "New Family Year"
   new_guardian: "New Guardian"
@@ -175,7 +175,7 @@ en:
     grade10: "10"
     grade11: "11"
     grade12: "12"
-    aula_inter: "Aula Inter"
+    special_needs: "Special Needs"
   enrollment_shirt_sizes:
     male_4: "Male Hombre 4"
     male_6: "Male Hombre 6"
