--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -20,28 +20,173 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 es:
+  active: "Activo"
+  child: "Niño"
+  children: "Niños"
+  child_created: "Niño se ha creado correctamente."
+  child_updated: "Niño se ha actualizado correctamente."
+  child_deleted: "Niño fue eliminado correctamente."
+  city: "Ciudad"
+  close_up_photo: "Foto de Cerca"
+  code: "Codigo"
   communities: "Comunidades"
-  home: "Casa"
+  community: "Comunidad"
+  community_created: "Comunidad se ha creado correctamente."
+  community_updated: "Comunidad se ha actualizado correctamente."
+  community_deleted: "Comunidad fue eliminado correctamente."
+  confirm_destroy: "¿Estás seguro?"
+  date_of_birth: "Fecha de Nacimiento"
+  destroy: "Destruir"
+  dollar_amount: "Monto en Dólares"
+  donor_number: "Codigo de Patrocinador"
+  edit: "Editar"
+  enrollment: "Registro"
+  enrollments: "Registros"
+  enrollment_created: "El registro se ha creado correctamente."
+  enrollment_updated: "El registro se ha actualizado correctamente."
+  enrollment_destroyed: "Registro fue destruido."
+  families: "Familias"
+  family: "Familia"
+  family_created: "La familia se ha creado correctamente."
+  family_updated: "La familia se ha actualizado correctamente."
+  family_destroyed: "La familia fue destruido."
+  family_name: "Apellido"
+  family_names: "Apellidos"
+  family_name1: "Primer Apellido"
+  family_name2: "Segundo Apellido"
+  family_year: "Año Escolar"  # School Year
+  family_years: "Años Escolares"
+  family_year_created: "Año escolar se ha creado correctamente."
+  family_year_updated: "Año escolar se ha acutalizado correctamente."
+  family_year_destroyed: "Año escolar fue eliminado correctamente."
+  full_photo: "Foto Entero"
+  gender: "Sexo"
+  given_name: "Nombre"
+  given_names: "Nombres"
+  given_name1: "Primer Nombre"
+  given_name2: "Segundo Nombre"
+  grades: "Grados"
+  grades_notes: "Apuntes de Grado"
+  guardian: "Encargado"
+  guardians: "Encargados"
+  guardian_created: "Encargado se ha creado correctamente."
+  guardian_updated: "Encargado se ha acutalizado correctamente."
+  guardian_destroyed: "Encargado fue eliminado correctamente."
+  home: "Pagina Principal"
+  name: "Nombre"
+  midyear_attendance: "Asistencia de Julio "
+  midyear_attendance_notes: "Apuntes de Asistencia de Julio"
+  midyear_pant_size: "Talla de Pantalones (Julio)"
+  midyear_shirt_size: "Talla de Camisa (Julio)"
+  midyear_shoe_size: "Tallas de Zapatos (Julio)"
+  new: "Nuevo"
+  new_child: "Nuevo Niño"
+  new_community: "Nueva Comunidad"
+  new_enrollment: "Nueva Registro"
+  new_family: "Nueva Familia"
+  new_family_year: "Nuevo Año Escolar"
+  new_guardian: "Nuevo Encargado"
+  new_sponsor: "Nuevo Patrocinador"
+  new_sponsorship: "Nuevo Patrocinio"
+  newyear_attendance: "Asistencia de Enero"
+  newyear_attendance_notes: "Apuntes de Asistencia de Enero"
+  newyear_pant_size: "Talla de Pantalones (Enero)"
+  newyear_shirt_size: "Talla de Camisa (Enero)"
+  newyear_shoe_size: "Tallas de Zapatos (Enero)"
+  next_code: "Siguiente Código"
+  not_included: "No Incluido"
+  number_children: "Numero de Niños"
+  notes: "Apuntes"
+  letter: "Cartas"
+  link: "Enlazar"
+  login: "Iniciar Sesión"
+  logout: "Cerrar Sesión"
+  pass: "Pasar"
+  password: "Clave"
+  pass_notes: "Apuntes de Pasar"
+  phones: "Teléfono "
+  picture: "Foto"
+  postal_code: "Codigo Postal"
+  preferred_name: "Nombre Preferido"
+  primary: "Primario"
+  primary_phone: "Teléfono Principal"
+  primary_email: "Email Principal"
+  record_not_saved: "El registro no se salvó debido a errores."
+  report_card: "Notas de Calificaciones"
+  report_notes: "Apuntes de Notas de Calificaciones"
+  relationship: "Relación"
+  role_accountant: "Contador"
+  role_admin: "Administración"
+  role_author: "Autor"
+  role_editor: "Editor"
+  role_interviewer: "Entrevistador"
+  secondary_phone: "Teléfono Secundario"
+  secondary_email: "Email Secundario"
+  school_year: "Año Escolar"
+  show: "Mostrar"
+  street_address: "Dirección"
+  sponsor: "Patrocinador"
   sponsors: "Patrocinadores"
+  sponsor_created: "Patrocinador se ha creado correctamente."
+  sponsor_updated: "Patrocinador se ha actualizado correctamente."
+  sponsor_deleted: "Patrocinador fue eliminado correctamente."
+  sponsorship: "Patrocinio"
+  sponsorships: "Patrocinios"
+  sponsorship_created: "Patrocinio se ha creado correctamente."
+  sponsorship_updated: "Patrocinio se ha actualizado correctamente."
+  sponsorship_deleted: "Patrocinio fue eliminado correctamente."
+  status: "Estado"
+  submit: "Enviar"
+  username: "Nombre de Usuario"
+  work_form: "Boleta de Trabajo"
+  work_form_notes: "Apuntes de Boleta de Trabajo"
+  bool:
+    "true": "Verdadero"
+    "false": "Falso"
+  child_status:
+    in_program: "En el Programa"
+    out_of_program: "Fuera del Programa"
+    graduate: "Graduado"
+  enrollment_attendance:
+    "yes": "Si"
+    "no": "No"
+    sick: "Enfermo"
+    graduated: "Graduado"
+    university_sponsored: "Universidad con Patrocinio"
+    university_not_sponsored: "Universidad sin Patrocinio"
+    out_of_program: "Fuera del Programa"
+    other: "Otro"
+  enrollment_grades:
+    special_needs: "Aula Intergrada"
+  enrollment_shirt_sizes:
+    other: "Otro"
+  enrollment_pant_sizes:
+    other: "Otro"
+  enrollment_shoe_sizes:
+    other: "Otro"
   month:
-    jan: 'Enero'
-    feb: 'Febrero'
-    mar: 'Marzo'
-    apr: 'Abril'
-    may: 'Mayo'
-    jun: 'Junio'
-    jul: 'Julio'
-    aug: 'Agosto'
-    sep: 'Septiembre'
-    oct: 'Octubre'
-    nov: 'Noviembre'
-    dec: 'Diciembre'
-  activerecord:
-    models:
-      family_year: "Family Year"
-      community: "Comunidad"
-    attributes:
-      child:
-        code: "Code"
-        name: "Name"
-        notes: "Notes"
+    jan: "Enero"
+    feb: "Febrero"
+    mar: "Marzo"
+    apr: "Abril"
+    may: "Mayo"
+    jun: "Junio"
+    jul: "Julio"
+    aug: "Agosto"
+    sep: "Setiembre"
+    oct: "Octubre"
+    nov: "Noviembre"
+    dec: "Diciembre"
+  helpers:
+    submit:
+      create: "Crear"
+      update: "Actualizar"
+  guardian_relationship:
+    mother: "Madre"
+    father: "Padre"
+    step_mother: "Madrastra"
+    step_father: "Padrastro"
+    grand_mother: "Abuela"
+    grand_father: "Abuelo"
+    older_sibling: "Hermano Major"
+    other: "Otro"
