Adjust layout. Move update buttons. Update favicon. Consolidate notes fields. Add Grade fields.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,7 @@ en:
   name: "Name"
   midyear_attendance: "July Attendance"
   midyear_attendance_notes: "July Attendance Notes"
+  midyear_grade: "July Grade"
   midyear_pant_size: "July Pant Size"
   midyear_shirt_size: "July Shirt Size"
   midyear_shoe_size: "July Shoe Size"
@@ -91,6 +92,7 @@ en:
   new_sponsorship: "New Sponsorship"
   newyear_attendance: "January Attendance"
   newyear_attendance_notes: "January Attendance Notes"
+  newyear_grade: "January Grade"
   newyear_pant_size: "January Pant Size"
   newyear_shirt_size: "January Shirt Size"
   newyear_shoe_size: "January Shoe Size"
@@ -163,6 +165,10 @@ en:
     out_of_program: "Out of Program"
     other: "Other"
   enrollment_grades:
+    "pre_kinder": "Pre-Kinder"
+    "kinder": "Kinder"
+    "university": "University"
+    "university_grad": "University Grad"
     grade1: "1"
     grade2: "2"
     grade3: "3"
