Enhance Add July report card and July work form fields https://github.com/kpatrick/crk2/issues/17
requires translations from https://github.com/kpatrick/crk2/issues/20

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,8 @@ en:
   midyear_pant_size: "July Pant Size"
   midyear_shirt_size: "July Shirt Size"
   midyear_shoe_size: "July Shoe Size"
+  midyear_work_form: "July Work Form"
+  midyear_report_card: "July Report Card"
   new: "New"
   new_child: "New Child"
   new_community: "New Community"
@@ -96,6 +98,8 @@ en:
   newyear_pant_size: "January Pant Size"
   newyear_shirt_size: "January Shirt Size"
   newyear_shoe_size: "January Shoe Size"
+  newyear_report_card: "January Report Card"
+  newyear_work_form: "January Work Form"
   next_code: "Next Code"
   not_included: "Not Included"
   number_children: "Number of Children"
@@ -115,7 +119,6 @@ en:
   primary_phone: "Primary Phone"
   primary_email: "Primary Email"
   record_not_saved: "The record was not saved due to errors."
-  report_card: "Report Card"
   report_notes: "Report Notes"
   relationship: "Relationship"
   role_accountant: "Accountant"
@@ -143,7 +146,6 @@ en:
   username: "Username"
   use_english: "en"
   use_spanish: "es"
-  work_form: "Work Form"
   work_form_notes: "Work Form Notes"
   bool:
     "true": "True"
