--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -80,6 +80,8 @@ es:
   midyear_pant_size: "Talla de Pantalones (Julio)"
   midyear_shirt_size: "Talla de Camisa (Julio)"
   midyear_shoe_size: "Tallas de Zapatos (Julio)"
+  midyear_work_form: "July Work Form"
+  midyear_report_card: "July Report Card"
   new: "Nuevo"
   new_child: "Nuevo Niño"
   new_community: "Nueva Comunidad"
@@ -95,6 +97,8 @@ es:
   newyear_pant_size: "Talla de Pantalones (Enero)"
   newyear_shirt_size: "Talla de Camisa (Enero)"
   newyear_shoe_size: "Tallas de Zapatos (Enero)"
+  newyear_report_card: "January Report Card"
+  newyear_work_form: "January Work Form"
   next_code: "Siguiente Código"
   not_included: "No Incluido"
   number_children: "Numero de Niños"
@@ -114,7 +118,6 @@ es:
   primary_phone: "Teléfono Principal"
   primary_email: "Email Principal"
   record_not_saved: "El registro no se salvó debido a errores."
-  report_card: "Notas de Calificaciones"
   report_notes: "Apuntes de Notas de Calificaciones"
   relationship: "Relación"
   role_accountant: "Contador"
@@ -140,7 +143,6 @@ es:
   status: "Estado"
   submit: "Enviar"
   username: "Nombre de Usuario"
-  work_form: "Boleta de Trabajo"
   work_form_notes: "Apuntes de Boleta de Trabajo"
   bool:
     "true": "Verdadero"
