Fix Do not allow duplicate records https://github.com/kpatrick/crk2/issues/15

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -329,3 +329,5 @@ en:
     grand_father: "Grand Father"
     older_sibling: "Older Sibling"
     other: "Other"
+  errors:
+    duplicate: "Duplicate"
