update translations https://github.com/kpatrick/crk2/issues/20

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -80,8 +80,8 @@ es:
   midyear_pant_size: "Talla de Pantalones (Julio)"
   midyear_shirt_size: "Talla de Camisa (Julio)"
   midyear_shoe_size: "Tallas de Zapatos (Julio)"
-  midyear_work_form: "July Work Form"
-  midyear_report_card: "July Report Card"
+  midyear_work_form: "Boleta de Julio"
+  midyear_report_card: "Nota de Julio"
   new: "Nuevo"
   new_child: "Nuevo Niño"
   new_community: "Nueva Comunidad"
@@ -97,8 +97,8 @@ es:
   newyear_pant_size: "Talla de Pantalones (Enero)"
   newyear_shirt_size: "Talla de Camisa (Enero)"
   newyear_shoe_size: "Tallas de Zapatos (Enero)"
-  newyear_report_card: "January Report Card"
-  newyear_work_form: "January Work Form"
+  newyear_report_card: "Nota de Enero"
+  newyear_work_form: "Boleta de Enero"
   next_code: "Siguiente Código"
   not_included: "No Incluido"
   number_children: "Numero de Niños"
@@ -198,3 +198,5 @@ es:
     grand_father: "Abuelo"
     older_sibling: "Hermano Major"
     other: "Otro"
+  errors:
+    duplicate: "Duplicado"
