Fix reopened issue #9 so that it works on AJAX request.
Make enhancement #21 to used included rather than not included.

Requires db migrate.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,6 +103,7 @@ en:
   newyear_work_form: "January Work Form"
   next_code: "Next Code"
   not_included: "Not Included"
+  included: "Included"
   number_children: "Number of Children"
   notes: "Notes"
   letter: "Letter"
