--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -102,6 +102,7 @@ es:
   newyear_work_form: "Boleta de Enero"
   next_code: "Siguiente Código"
   not_included: "No Incluido"
+  included: "Incluido"
   number_children: "Numero de Niños"
   notes: "Apuntes"
   letter: "Cartas"
